feat: Complete detection-rules CI/CD workflow implementation
Major Updates:
- Add workflow cleanup script to remove 15+ noisy upstream workflows
- Update github.tf to run cleanup script during repo creation
- Optimize deploy-to-dev workflow (remove validation, 44s deployment)
- Add auto-PR creation on feature branch push (WORKING!)
- Fix GitHub secrets configuration for auto-deployment
- Add setup-local-machine.md with venv instructions
- Add setup-detection-rules.sh for API key automation
- Update demo script and test data
- Add tomcatastrophe.py for attack simulation

Detection as Code Workflow (FULLY AUTOMATED):
1. Create rule in Local Kibana
2. Export with detection-rules CLI
3. Push to feature/** branch
4. PR automatically created ✅
5. PR validation runs (unit tests, code checks)
6. Merge PR to main
7. Auto-deploy to Dev Kibana (44s) ✅

The complete purple team demo workflow is now functional!

--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,10 @@ id_rsa*
 # OS files
 .DS_Store
 Thumbs.db
+
+# Environment files with API keys
+scripts/.env-detection-rules
+
+# Deployment info files
+scripts/elastic-agent-deployment-info.txt
+terraform/elastic-agent-deployment-info.txt
