refactor: Project cleanup and terraform improvements
Phase 1 - Critical Cleanup:
- Remove .DS_Store files from filesystem
- Consolidate deployment info files (deleted 2 old copies)
- Move untracked scripts to scripts/ directory
- Update .gitignore pattern for deployment info files

Phase 2 - Terraform Improvements:
- Fix aws_instance_type default from t3.medium to t3.large
- Add ssh_public_key_path variable (configurable SSH key)
- Update main.tf to use ssh_public_key_path variable
- Update outputs.tf SSH commands to use variable
- Update terraform.tfvars.example with new variable

Resolves redundant files, improves terraform configurability

--- a/.gitignore
+++ b/.gitignore
@@ -56,6 +56,5 @@ Thumbs.db
 # Environment files with API keys
 scripts/.env-detection-rules
 
-# Deployment info files
-scripts/elastic-agent-deployment-info.txt
-terraform/elastic-agent-deployment-info.txt
+# Deployment info files (generated output)
+**/elastic-agent-deployment-info.txt
