--- a/.gitignore
+++ b/.gitignore
@@ -12,9 +12,8 @@ elastic-security-demo.code-workspace
 .idea/
 
 # Terraform
-state/
+terraform/state/
 **/.terraform/
-**/.terraform.lock.hcl
 **/terraform.tfstate
 **/terraform.tfstate.*
 **/terraform.tfstate.backup
@@ -24,6 +23,8 @@ state/
 **/tfplan
 **/tfplan.*
 **/.terraform.tfstate.lock.info
+
+# Note: .terraform.lock.hcl should be committed to version control
 
 # Example terraform (contains secrets/credentials)
 example-terraform/
